Change entity lookup design
